@@ -33,6 +33,7 @@ subprojects {
 
     tasks.named('test') {
         useJUnitPlatform()
+        jvmArgs '-Dnet.bytebuddy.experimental=true'
     }
 
     checkstyle {
